# turboquant-torch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  known-vulnerabilities.txt  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
benchmarks/: bench_adaptive.py  bench_codebook.py  bench_downstream.py  bench_gqa.py  bench_outlier.py  bench_pre_rope.py  bench_regression.py  bench_sliding_window.py  generate_cards.py  regression_baseline.json  results.md  run_benchmarks.py
docs/: api-reference.md  compatibility.md  quickstart.md
examples/: 01_quickstart.ipynb  01_quickstart.py  02_long_context.ipynb  02_long_context.py  03_adaptive_compression.ipynb  03_adaptive_compression.py  basic_usage.py  demo_live.py  huggingface_demo.py  kv_cache_demo.py  vector_search_demo.py
examples/demo/: demo.tape  demo_live.py
scripts/: precompute_codebooks.py  version.sh
tests/: conftest.py  test_codebook.py  test_core.py  test_distortion_bounds.py  test_hadamard.py  test_kv_cache.py  test_mse.py  test_qjl.py
tests/integration/: test_device.py  test_kv_compression_flow.py  test_outlier_integration.py  test_pipeline.py  test_pre_rope_integration.py
tests/smoke/: test_compat_smoke.py  test_hf_integration.py  test_huggingface.py
tests/unit/: test_adaptive.py  test_codebook.py  test_codebook_refinement.py  test_compat.py  test_core.py  test_distortion_bounds.py  test_gqa.py  test_hadamard.py  test_hf_cache.py  test_mse.py  test_outlier.py  test_properties.py  test_qjl.py  test_regression.py  test_rope.py  test_sliding_window.py  test_vector_search.py  test_wrap.py
turboquant/: __init__.py  adaptive.py  codebook.py  codebook_data.py  compat.py  core.py  hadamard.py  hf_cache.py  kv_cache.py  mse_quantizer.py  outlier.py  qjl.py  rope.py  vector_search.py  wrap.py
