[build-system]
requires = ["setuptools>=68.0,<75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-torch"
version = "0.1.0"
description = "Unofficial PyTorch reference implementation of TurboQuant (ICLR 2026)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.setuptools.packages.find]
include = ["turboquant*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "E501",   # line length (handled by formatter)
    "S101",   # assert usage (ok in tests)
    "S311",   # random (not crypto, we use it for seeds)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311"]
"examples/*" = ["S311"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["turboquant"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
